--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,14 @@ node_modules
 tmp
 .sass-cache
 *.css.map
+
+# wordpress specific
+wp-config.php
+wp-content/uploads/
+wp-content/blogs.dir/
+wp-content/upgrade/*
+wp-content/backup-db/*
+wp-content/advanced-cache.php
+wp-content/wp-cache-config.php
+wp-content/cache/*
+wp-content/cache/supercache/*
